
syntax = "proto3";

// Package name
option go_package = "RetroPGF-Hub/RetroPGF-Hub-Backend-Go";


message CreateCommentProjectReq {
    string projectId = 1;
}
message CreateCommentProjectRes {
    string msg = 1;
}

service CommentGrpcService {
    rpc CreateCommentProject(CreateCommentProjectReq) returns (CreateCommentProjectRes);
}